tests/ui/borrowck/borrow-raw-address-of-deref-mutability.stderr
error[E0596]: cannot borrow `*x` as mutable, as it is behind a `&` reference
  --> $DIR/borrow-raw-address-of-deref-mutability.rs:6:13
   |
LL |     let q = &raw mut *x;
   |             ^^^^^^^^^^^ `x` is a `&` reference, so the data it refers to cannot be borrowed as mutable
   |
help: consider changing this to be a mutable reference
   |
LL |     let x = &mut 0;
   |              +++

error[E0596]: cannot borrow `*x` as mutable, as it is behind a `*const` pointer
  --> $DIR/borrow-raw-address-of-deref-mutability.rs:12:13
   |
LL |     let q = &raw mut *x;
   |             ^^^^^^^^^^^ `x` is a `*const` pointer, so the data it refers to cannot be borrowed as mutable
   |
help: consider specifying this binding's type
   |
LL |     let x: *mut i32 = &0 as *const i32;
   |          ++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
